GRADLE-2318: Use NekoHtml sax parser for parsing directory listing; todo: add proper encoding handling in ApacheDirectoryListingParser.